# moat

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  default.nix  flake.nix  fourmolu.yaml  moat.cabal  moat.nix  package.yaml  shell.nix
.github/workflows/: build-and-test.yml  haskell.yml  nix.yml
.nix/: flake-compat.nix
nix/: cmark-gfm-cabal.patch  flake-compat.nix
src/: Moat.hs  Test.hs  Test.hs.bak
test/: AdvancedEnumSpec.hs  AdvancedEnumWithRawValueSpec.hs  AdvancedNewtypeSpec.hs  AdvancedNewtypeWithEnumFieldSpec.hs  AdvancedRecordSpec.hs  BasicDocSpec.hs  BasicEnumSpec.hs  BasicEnumWithRawValueSpec.hs  BasicNewtypeJoinOptionalsSpec.hs  BasicNewtypeSpec.hs  BasicNewtypeSpecInlineClass.hs  BasicNewtypeSpecInlineClassSpec.hs  BasicNewtypeWithConcreteFieldSpec.hs  BasicNewtypeWithEitherFieldSpec.hs  BasicRecordSpec.hs  BasicRecordWithExpandOptionalSpec.hs  Common.hs  DeprecatedFieldSpec.hs  DuplicateRecordFieldSpec.hs  EnumValueClassDocSpec.hs  EnumValueClassSpec.hs  GenericAliasSpec.hs  GenericNewtypeSpec.hs  GenericStructSpec.hs  MultipleTypeVariableSpec.hs  SingleNullarySpec.hs  SingleNullaryWithTypeVariableSpec.hs  Spec.hs  StrictEnumsSpec.hs  StrictFieldsSpec.hs  SumOfProductDocSpec.hs  SumOfProductSpec.hs  SumOfProductWithLinkEnumInterfaceSpec.hs  SumOfProductWithNameCollisionSpec.hs  SumOfProductWithTaggedFlatObjectStyleSpec.hs  SumOfProductWithTaggedObjectAndNonConcreteCasesSpec.hs  SumOfProductWithTaggedObjectAndSingleNullarySpec.hs  SumOfProductWithTaggedObjectStyleSpec.hs  SumOfProductWithTypeParameterSpec.hs  TypeVariableSpec.hs
(+155 files in other folders)
