cabal-version: 2.2
name:
  moat
version:
  0.1
synopsis:
  Generate swift and kotlin types from
  haskell types.
-- description:
--   Shwifty provides many utilities for generating swift types from haskell types,
--   with great flexibility in representation, and emphasis on generating typesafe
--   Swift code. Most of the types representable in Haskell98 are supported.
bug-reports:
  https://github.com/chessai/moat/issues
license:
  MIT
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
copyright:
  Copyright (c) 2021, chessai
category:
  Codegen, Text, TemplateHaskell
build-type:
  Simple
extra-source-files:
  CHANGELOG.md
  README.md

library
  hs-source-dirs:
    src
  exposed-modules:
    Moat
    Test
  other-modules:
    Moat.Class
    Moat.Pretty.Kotlin
    Moat.Pretty.Swift
    Moat.Types
  build-depends:
    , base >= 4.11 && < 4.15
    , bytestring >= 0.10 && < 0.11
    , case-insensitive >= 1.2 && < 1.3
    , containers >= 0.5.9 && < 0.7
    , mtl >= 2.2 && < 2.3
    , primitive >= 0.6.4 && < 0.8
    , template-haskell >= 2.11 && < 2.17
    , text >= 1.2 && < 1.3
    , th-abstraction >= 0.3 && < 0.4
    , time >= 1.8 && < 1.11
    , unordered-containers >= 0.2 && < 0.3
    , uuid-types >= 1.0 && < 1.1
    , vector >= 0.12 && < 0.13
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    git://github.com/chessai/moat.git
